Fixed footer shadow being visible when opening or closing nav-drawer

--- a/style/main.css
+++ b/style/main.css
@@ -271,7 +271,7 @@ a:hover {
 div#region-main-box {
     background-color: #f4f4f4!important;
     z-index: 1;
-    box-shadow: 0px 13px 20px #1f1d1d;
+    box-shadow: 12px 13px 20px #252323;
 }
 
 /* Remove the footer shadow on small screens */
